--- a/aplic/BUILD.bazel
+++ b/aplic/BUILD.bazel
@@ -2,7 +2,7 @@ cc_library(
     name = "aplic",
     hdrs = glob(["*.hpp", "**/*.hpp"]),
     srcs = glob(["*.cpp", "**/*.cpp"]),
-    visibility = ['//:__pkg__'],
+    visibility = ["//visibility:public"],
     include_prefix = "aplic",
     strip_include_prefix = ".",
 )
