--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,7 +20,7 @@ cc_library(
     srcs          = glob(include = ["*.cpp", "*.hpp"], exclude = ["whisper.cpp", "py-bindings.cpp"] + hdrs),
     hdrs          = hdrs,
     local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
-    deps          = ["//third_party:nlohmann", "//third_party:elfio", "//third_party:softfloat", "//third_party:linenoise", "//pci:pci"],
+    deps          = ["//third_party:nlohmann", "//third_party:elfio", "//third_party:softfloat", "//third_party:linenoise", "//pci:pci", "//virtual_memory:virtual_memory"],
     linkopts      = ["-lpthread", "-lz", "-ldl", "-lrt", "-llz4"],
     visibility    = ["//visibility:public"],
 )
