Make virtual_memory compile with PIC.

--- a/virtual_memory/Makefile
+++ b/virtual_memory/Makefile
@@ -1,6 +1,6 @@
 CXX      = g++
 OFLAGS   = -O3
-CXXFLAGS = -std=c++20 -Wall -I. $(OFLAGS)
+CXXFLAGS = -std=c++20 -Wall -I. $(OFLAGS) -fPIC
 SRCS    = VirtMem.cpp Tlb.cpp
 OBJS    = $(SRCS:.cpp=.o)
 TARGET  = libvirtual_memory.a
