Add support for using numactl
This commit adds --numa as a command-line option. If used, whisper will
attempt to use numactl to bind threads to CPUs with low load. The number
of numa cores used is equal to the number of harts. The max load is
hard-coded to 5.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -14,7 +14,8 @@ hdrs = [
     "InstId.hpp",
     "Isa.hpp",
     "IoDevice.hpp",
-    "Uart8250.hpp"
+    "Uart8250.hpp",
+    "numa.hpp"
 ]
 
 cc_library(
