--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -23,7 +23,7 @@ cc_library(
     hdrs          = hdrs,
     local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS", "LZ4_COMPRESS"],
     deps          = ["//third_party:nlohmann", "//third_party:elfio", "//third_party:softfloat", "//third_party:linenoise", "//pci:pci", "//virtual_memory:virtual_memory", "//aplic:aplic"],
-    linkopts      = ["-lpthread", "-lz", "-ldl", "-lrt", "-llz4", "-lutil"],
+    linkopts      = ["-lpthread", "-lz", "-ldl", "-lrt", "-llz4", "-lutil", "-lboost_program_options", "-rdynamic"],
     visibility    = ["//visibility:public"],
 )
 
