--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,8 +125,12 @@ notify_riscv_cluster:
     UPDATE_TARGET_BRANCH: ascalon/work/core
   trigger:
       project: riscv/riscv_cluster
-      branch: ascalon/work/core    
+      branch: ascalon/work/core
 
+notify-riescue:
+  <<: *notify-template
+  trigger:
+    project: riscv/riescue
 
 # notify-archcov:
 #   <<: *notify-template
@@ -137,6 +141,7 @@ notify_riscv_cluster:
 #   <<: *notify-template
 #   trigger:
 #     project: riscv/dv/rv_tester
+
 
 
 upload-release:
